# aws-gtw

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: config_local.py  test_gtw_emulator.py
src/client_cloud/: gtw_instance.py
src/client_cloud/api/: aws_api.py
src/client_cloud/config/: aws_config.py
src/client_cloud/login/: aws_login.py
src/client_cloud/utils/: decode_and_save_credentials.py  gtw_provisioning.py  modbus_utils.py  mqtt_utils.py  parse_credentials_bin.py  save_config_bin.py
